# PyWeb_HW10

./: README.md  pyproject.toml
quotes_project/quotes/: models.py  urls.py  views.py
quotes_project/quotes/templates/quotes/: base.html  index.html
quotes_project/quotes/templatetags/: extract.py
quotes_project/quotes_project/: asgi.py  settings.py  urls.py
quotes_project/users/: views.py
